<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.Registeration"
    android:background="@drawable/gradient">

    <!--
    <ImageView
        android:id="@+id/back_arraw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back_blue_24dp"/>
        -->

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <View
            android:id="@+id/left_view"
            android:layout_width="@dimen/viewWidth"
            android:layout_height="@dimen/viewHeight"
            android:background="@color/colorBlue"
            android:layout_marginTop="@dimen/viewMarginTop"/>

        <TextView
            android:id="@+id/reg_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registerReg"
            android:gravity="center"
            android:textSize="@dimen/headerSize"
            android:textColor="@color/colorBlue"
            android:layout_toRightOf="@id/left_view"/>

        <View
            android:id="@+id/right_view"
            android:layout_width="@dimen/viewWidth"
            android:layout_height="@dimen/viewHeight"
            android:layout_marginTop="@dimen/viewMarginTop"
            android:layout_toRightOf="@id/reg_header"
            android:background="@color/colorBlue" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createAcc"
        android:gravity="center"
        android:textSize="@dimen/createAccSize"
        android:layout_marginTop="@dimen/createMarginTop"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user"
        android:layout_width="@dimen/boxWidth"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/userBoxMarginTop"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        style="@style/TextInputLayoutStyleRegisteration">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/userReg"
            android:paddingLeft="@dimen/boxPaddingLeftRight"
            android:paddingRight="@dimen/boxPaddingLeftRight"
            android:textCursorDrawable="@color/colorBlack"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="@dimen/boxWidth"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:errorEnabled="true"
        style="@style/TextInputLayoutStyleRegisteration">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailReg"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/boxPaddingLeftRight"
            android:paddingRight="@dimen/boxPaddingLeftRight"
            android:textCursorDrawable="@color/colorBlack"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass"
        android:layout_width="@dimen/boxWidth"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        style="@style/TextInputLayoutStyleRegisteration">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passReg"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/boxPaddingLeftRight"
            android:paddingRight="@dimen/boxPaddingLeftRight"
            android:textCursorDrawable="@color/colorBlack"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ssn"
        android:layout_width="@dimen/boxWidth"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:errorEnabled="true"
        style="@style/TextInputLayoutStyleRegisteration">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ssnReg"
            android:inputType="number"
            android:paddingLeft="@dimen/boxPaddingLeftRight"
            android:paddingRight="@dimen/boxPaddingLeftRight"
            android:textCursorDrawable="@color/colorBlack"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone"
        android:layout_width="@dimen/boxWidth"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:errorEnabled="true"
        style="@style/TextInputLayoutStyleRegisteration">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phoneReg"
            android:inputType="number"
            android:paddingLeft="@dimen/boxPaddingLeftRight"
            android:paddingRight="@dimen/boxPaddingLeftRight"
            android:textCursorDrawable="@color/colorBlack"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!--
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="City">

        <AutoCompleteTextView
            android:id="@+id/filled_exposed_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>
    -->
    <LinearLayout
        android:layout_centerInParent="true"
        android:background="@drawable/dropdown_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:ignore="UselessParent">
        <Spinner
            android:id="@+id/city"
            android:layout_width="@dimen/boxWidth"
            android:layout_height="@dimen/spinnerHeight"
            android:backgroundTint="@color/colorBlack"
            android:overlapAnchor="false"
            android:spinnerMode="dropdown"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/privacyMarginTop"
        android:layout_gravity="center">

        <CheckBox
            android:id="@+id/agreeCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy"/>
    </LinearLayout>

    <Button
        android:id="@+id/regBtn"
        android:layout_width="@dimen/regBtnWidth"
        android:layout_height="wrap_content"
        android:text="@string/registerReg"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/regBtnMarginTop"
        android:textSize="@dimen/regBtnSize"
        android:textColor="@color/colorWhite"
        android:background="@drawable/register_unclickable_button"
        android:enabled="false"/>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alreadyHave"
            android:gravity="center"
            android:textSize="@dimen/alreadySize"
            android:textColor="@color/colorBlue"/>
        <TextView
            android:id="@+id/signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signIn"
            android:gravity="center"
            android:textSize="@dimen/signInSize"
            android:textColor="@color/sign_in_text"/>
    </LinearLayout>

</LinearLayout>