<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.Registeration.FragmentRegisterA">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        app:errorEnabled="true"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        style="@style/TextInputLayoutStyleRegisteration">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/userReg"
            android:paddingHorizontal="@dimen/boxPaddingHorizontal"
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:textCursorDrawable="@color/colorBlack"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/user"
        app:errorEnabled="true"
        style="@style/TextInputLayoutStyleRegisteration">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailReg"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="@dimen/boxPaddingHorizontal"
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:textCursorDrawable="@color/colorBlack"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/email"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        style="@style/TextInputLayoutStyleRegisteration">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passReg"
            android:inputType="textPassword"
            android:paddingHorizontal="@dimen/boxPaddingHorizontal"
            android:textCursorDrawable="@color/colorBlack"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_alignRight="@+id/pass"
        android:layout_below="@+id/pass"
        app:cardCornerRadius="10dp">
        <com.balysv.materialripple.MaterialRippleLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            style="@style/RippleStyleGrey">
            <TextView
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Next"
                android:textColor="#6415E2"
                android:textSize="20sp"
                android:padding="10dp"
                android:fontFamily="sans-serif-light"
                android:layout_gravity="center"/>
        </com.balysv.materialripple.MaterialRippleLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>